# Escrow

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD.md
docs/ADRs/: 0001-product-scope-and-actors.md  0002-modular-monolith.md  0003-domain-lifecycle.md  0004-double-entry-ledger.md  0005-asynchronous-messaging.md  0006-risk-and-dispute-workflow.md  0007-api-webhooks-and-realtime.md  0008-identity-and-security.md  0009-local-infrastructure-and-iac.md  0010-frontend-and-design-system.md  0011-quality-and-observability.md  0012-delivery-strategy.md  0013-mvp-operational-contract-clarifications.md  README.md
frontend/: .gitignore  Dockerfile  biome.json  index.html  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: checkout.e2e.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
src/escrow/: __init__.py  asgi.py  celery.py  correlation.py  health.py  http.py  logging.py  settings.py  urls.py  wsgi.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_health_endpoints.py  test_observability.py
tests/agreements/: test_agreement_creation.py  test_funding_lifecycle.py  test_invariants.py  test_openapi.py  test_pii.py
tests/audit/: test_audit_events.py
tests/delivery/: test_customer_acceptance.py  test_delivery_reporting.py  test_end_to_end_refund.py  test_end_to_end_release.py  test_end_to_end_usd_path.py  test_expired_delivery_refund.py  test_expired_inspection_release.py  (+3 more)
(+170 files in other folders)
