[project]
name = "escrow"
version = "0.1.0"
description = "A realistic B2B2C escrow custody simulation."
requires-python = ">=3.13,<3.14"
dependencies = [
  "boto3>=1.35,<2",
  "Django>=5.2,<5.3",
  "djangorestframework>=3.16,<3.17",
  "drf-spectacular>=0.29,<1",
  "daphne>=4.2,<5",
  "pika>=1.3,<2",
  "psycopg[binary]>=3.2,<4",
  "redis>=6,<7",
]

[dependency-groups]
dev = [
  "django-stubs>=5.2,<6",
  "djangorestframework-stubs>=3.16,<4",
  "hypothesis>=6,<7",
  "mypy>=1.17,<2",
  "pytest>=9,<10",
  "pytest-django>=4.11,<5",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "escrow.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = true
files = ["src"]
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "pika.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "escrow.settings"
